# LLauncher

./: .gitignore  README.md  build.sh  index.html  package.json
.github/workflows/: release.yml
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: client.rs  constants.rs  types.rs
src-tauri/src/config/: paths.rs  settings.rs
src-tauri/src/download/: extract.rs  manager.rs  mod.rs  proton.rs  verify.rs  worker.rs
src-tauri/src/game/: launcher.rs  mod.rs  proton.rs  state.rs
src/components/common/: GlassCard.css  GlassCard.jsx  IconButton.css  IconButton.jsx  LogViewer.css  LogViewer.jsx  SystemWarning.css  SystemWarning.jsx
src/components/home/: ActionButton.css  ActionButton.jsx  GameStatus.css  GameStatus.jsx  HomePage.css  HomePage.jsx  LaunchFailedDialog.css  LaunchFailedDialog.jsx  NewsItem.css  NewsItem.jsx  NewsPanel.css  NewsPanel.jsx  ProgressBar.css  ProgressBar.jsx  ProtonPrompt.css  ProtonPrompt.jsx  SingleEntCard.css  SingleEntCard.jsx  SocialIcons.jsx  SocialSidebar.css  SocialSidebar.jsx
src/components/layout/: MainLayout.css  MainLayout.jsx  TitleBar.css  TitleBar.jsx
src/components/settings/: PathSelector.css  (+5 more)
src/hooks/: useDownload.js  useGameState.js  useLaunchEvents.js  useLauncherContent.js  useProtonDownload.js  useSettings.js  useSystemCheck.js
src/i18n/: en.js  index.jsx  ru.js
src/styles/: animations.css  global.css  variables.css
src/utils/: format.js
